Up dependencies.